	PR rtl-optimization/42621 	* bb-reorder.c (gate_duplicated_computed_gotos): Only run if not 	optimizing for size. 	(duplicate_computed_gotos): Remove now-redundant check.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155796 138bc75d-0d04-0410-961f-82ee72b054a4